# anchor-chain

./: .git-pre-commit  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml
anchor-chain-macros/: Cargo.toml
anchor-chain-macros/src/: lib.rs
anchor_chain/: all.html  enum.AnchorChainError.html  fn.main.html  index.html  sidebar-items.js  struct.Link.html  struct.StateManager.html  struct.ToolRegistry.html
anchor_chain/agents/: index.html  sidebar-items.js
anchor_chain/agents/tool_registry/: index.html  sidebar-items.js  struct.ToolEntry.html  struct.ToolRegistry.html  trait.ToolHandler.html
anchor_chain/chain/: index.html  sidebar-items.js  struct.Chain.html  struct.ChainBuilder.html  struct.LinkedChainBuilder.html  struct.StatefulLinkedChainBuilder.html
anchor_chain/error/: enum.AnchorChainError.html  index.html  sidebar-items.js
anchor_chain/link/: index.html  struct.Link.html
anchor_chain/logger/: index.html  struct.Logger.html
anchor_chain/message/: enum.ChatMessage.html  index.html  sidebar-items.js  struct.AssisnantChatMessage.html  struct.AssistantChatMessage.html  struct.UserChatMessage.html
anchor_chain/models/: index.html  sidebar-items.js
anchor_chain/models/claude_3/: index.html  sidebar-items.js  struct.Claude3Bedrock.html  struct.ClaudeImageSource.html  struct.ClaudeMessage.html  struct.ClaudeMessageContent.html
anchor_chain/models/embedding_model/: index.html  sidebar-items.js  trait.EmbeddingModel.html
anchor_chain/models/gpt_3_5_turbo/: index.html  sidebar-items.js  struct.Gpt3_5Turbo.html
anchor_chain/models/ollama/: index.html  sidebar-items.js  struct.Ollama.html
anchor_chain/models/openai/: enum.OpenAIModel.html  index.html  sidebar-items.js  struct.OpenAI.html  struct.OpenAIChatModel.html  struct.OpenAIEmbeddingModel.html  struct.OpenAIInstructModel.html
anchor_chain/node/: index.html  sidebar-items.js  struct.End.html  struct.Link.html  struct.NoOpNode.html  struct.PassthroughNode.html  trait.Node.html  trait.NodeState.html  trait.Stateful.html  trait.Stateless.html
anchor_chain/nodes/: index.html  sidebar-items.js
anchor_chain/nodes/logger/: index.html  struct.Logger.html
anchor_chain/nodes/prompt/: index.html  struct.Prompt.html
anchor_chain/parallel_node/: fn.to_boxed_future.html  index.html  sidebar-items.js  struct.ParallelNode.html
anchor_chain/prompt/: index.html  struct.Prompt.html
anchor_chain/retrievers/: index.html
anchor_chain/retrievers/opensearch/: index.html  struct.OpenSearchRetriever.html
anchor_chain/state_manager/: struct.StateManager.html
anchor_chain/trace_node/: index.html  sidebar-items.js  struct.TraceNode.html
anchor_chain/vector/: index.html  sidebar-items.js
anchor_chain/vector/document/: index.html  sidebar-items.js  struct.DocCollection.html  struct.Document.html
anchor_chain/vector/opensearch/: index.html  struct.OpenSearchRetriever.html
anchor_chain/vector/opensearch_client_builder/: index.html  sidebar-items.js  struct.OpenSearchClientBuilder.html
anchor_chain/vector/opensearch_indexer/: index.html  sidebar-items.js  struct.OpenSearchIndexer.html
anchor_chain/vector/opensearch_retriever/: index.html  sidebar-items.js  struct.OpenSearchRetriever.html
examples/: chain_with_tracing.rs  custom_nodes.rs  gpt_3_5_instruct.rs  index_documents.rs  ollama.rs  parallel_nodes.rs  parallel_nodes_async.rs  retrieval_augmented_generation.rs  stateful_chain.rs  tool_usage.rs
search.desc/anchor_chain/: anchor_chain-desc-0-.js
src/: bin.rs  chain.rs  error.rs  lib.rs  link.rs  logger.rs  memory_manager.rs  message.rs  node.rs  parallel_node.rs  prompt.rs  state_manager.rs  trace_node.rs
src/agents/: agent_executor.rs  mod.rs  tool_registry.rs
src/anchor_chain/: bin.rs.html  chain.rs.html  error.rs.html  lib.rs.html  link.rs.html  logger.rs.html  memory_manager.rs.html  message.rs.html  node.rs.html  parallel_node.rs.html  prompt.rs.html  state_manager.rs.html  trace_node.rs.html
src/anchor_chain/agents/: mod.rs.html  tool_registry.rs.html
src/anchor_chain/models/: claude_3.rs.html  embedding_model.rs.html  gpt_3_5_turbo.rs.html  mod.rs.html  ollama.rs.html  openai.rs.html
src/anchor_chain/nodes/: logger.rs.html  mod.rs.html  prompt.rs.html
src/anchor_chain/retrievers/: document.rs.html  mod.rs.html  opensearch.rs.html
src/anchor_chain/vector/: document.rs.html  mod.rs.html  opensearch.rs.html  opensearch_client_builder.rs.html  opensearch_indexer.rs.html  opensearch_retriever.rs.html
src/models/: bedrock_converse.rs  claude_3.rs  embedding_model.rs  gpt_3_5_turbo.rs  mod.rs  ollama.rs  openai.rs
src/nodes/: logger.rs  mod.rs  prompt.rs
src/retrievers/: document.rs  mod.rs  opensearch.rs
src/vector/: document.rs  mod.rs  opensearch.rs  opensearch_client_builder.rs  opensearch_indexer.rs  opensearch_retriever.rs
trait.impl/anchor_chain/models/embedding_model/: trait.EmbeddingModel.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/collect/: trait.FromIterator.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
