[workspace]
members = [".", "anchor-chain-macros"]

[package]
name = "anchor-chain"
version = "0.4.2"
edition = "2021"
description = "A statically typed async framework for building LLM-based applications."
license = "MIT"
repository = "https://github.com/emersonmde/anchor-chain"
documentation = "https://docs.rs/anchor-chain/latest/anchor_chain/"
readme = "README.md"
keywords = ["llm", "langchain", "rag", "openai", "claude"]
categories = ["development-tools", "api-bindings", "asynchronous", "concurrency"]
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]

[features]
default = ["macros"]
macros = ["anchor-chain-macros", "ctor"]
full = ["macros", "tracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
once_cell = "1.19.0"

[dependencies]
async-openai = "0.23.2"
async-trait = "0.1.80"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.34.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.20.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", optional = true }
# TODO: add a feature flag for OpenSearch
opensearch = { version = "2.2.0", features = ["aws-auth"] }
base64 = "0.22.0"
reqwest = "0.12.4"

#TODO: add a feature flag for proc macros then put ctor and serde_json exports in lib.rs
#   behind feature flags
anchor-chain-macros = { path = "anchor-chain-macros", optional = true}
ctor = { version = "0.2.8", optional = true }
