[workspace]
members = [".", "anchor-chain-macros"]

[package]
name = "anchor-chain"
version = "0.4.2"
edition = "2021"
description = "A statically typed async framework for building LLM-based applications."
license = "MIT"
repository = "https://github.com/emersonmde/anchor-chain"
documentation = "https://docs.rs/anchor-chain/latest/anchor_chain/"
readme = "README.md"
keywords = ["llm", "langchain", "rag", "openai", "claude"]
categories = ["development-tools", "api-bindings", "asynchronous", "concurrency"]
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]

[features]
default = ["macros", "openai"]
full = ["macros", "tracing", "openai", "opensearch", "bedrock", "ollama"]
macros = ["anchor-chain-macros", "ctor"]
tracing = ["dep:tracing"]
openai = ["async-openai"]
opensearch = ["dep:opensearch", "aws-config"]
bedrock = ["aws-sdk-bedrockruntime", "aws-config"]
ollama = ["reqwest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
once_cell = "1.19.0"

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.20.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.22.0"
async-openai = { version = "0.23.2", optional = true }
tracing = { version = "0.1.40", optional = true }
reqwest = { version = "0.12.4", optional = true }
aws-config = { version = "1.5.1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1.34.0", optional = true }
opensearch = { version = "2.2.0", features = ["aws-auth"], optional = true }
anchor-chain-macros = { path = "anchor-chain-macros", optional = true}
ctor = { version = "0.2.8", optional = true }


[[example]]
name = "chain_with_tracing"
required-features = ["openai"]

[[example]]
name = "custom_nodes"
required-features = ["openai"]

[[example]]
name = "gpt_3_5_instruct"
required-features = ["openai"]

[[example]]
name = "index_documents"
required-features = ["opensearch"]

[[example]]
name = "ollama"
required-features = ["ollama"]

[[example]]
name = "parallel_nodes"
required-features = ["openai", "bedrock"]

[[example]]
name = "parallel_nodes_async"
required-features = ["openai", "bedrock"]

[[example]]
name = "retrieval_augmented_generation"
required-features = ["opensearch", "openai"]

[[example]]
name = "tool_usage"
required-features = ["bedrock"]

[[example]]
name = "stateful_chain"
required-features = []
